--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
-    "styled-components": "^5.1.0"
+    "react-icons": "^3.10.0",
+    "styled-components": "^5.1.0",
+    "styled-icons": "^10.2.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
